# CellStudio

./: .gitignore  .gitmodules  ARCHITECTURE_TEST_GUIDE.md  DEVELOPMENT_TASKS.md  PROJECT_PLAN.md  README.md  Thesis_Experiment_Report.md  analysis_qupath.md  debug_model.py  mkdocs.yml  pyproject.toml  refactor_metrics.py  refactor_plotting.py  requirements.txt  run_experiments.ps1  test_classification_metrics.py
Ultralytics/: settings.json
api/: main.py
cellstudio-core/: pyproject.toml  requirements.txt
cellstudio-core/cellstudio/: __init__.py
cellstudio-core/cellstudio/backends/: registry.py
cellstudio-core/cellstudio/backends/cellpose/: adapter.py
cellstudio-core/cellstudio/datasets/: __init__.py  base.py  classification.py  collate.py  mido.py  registry.py  schema.py  segmentation.py  splitter.py  tile_mido.py  udf_dataset.py
cellstudio-core/cellstudio/engine/: inferencer.py  tester.py
cellstudio-core/cellstudio/evaluation/: evaluator.py  udf_hook.py
cellstudio-core/cellstudio/inference/: __init__.py
cellstudio-core/cellstudio/metrics/: __init__.py
cellstudio-core/cellstudio/models/: builder.py  cellpose_plugin.py  sam_plugin.py  unet_plugin.py
cellstudio-core/cellstudio/plotting/: __init__.py  curves.py  registry.py
cellstudio-core/cellstudio/service/: main.py  schemas.py
cellstudio-core/cellstudio/structures/: csuos.py  results.py
cellstudio-core/cellstudio/tasks/: __init__.py  base.py  classification.py  object_detection.py  registry.py  segmentation.py
cellstudio-core/cellstudio/utils/: match.py
cellstudio-core/configs/_base_/: default_runtime.yaml
cellstudio-core/configs/classify/: timm_efficientnet_b3_mido.yaml  yolo_v8m_cls_mido.yaml
cellstudio-core/configs/detect/: fcos_mido.yaml  yolo_26m_det_mido.yaml  yolo_26m_det_mido_tile.yaml  yolo_v8m_det_mido.yaml  yolo_v8m_det_mido_tile.yaml
cellstudio-core/configs/segmentation/: cellpose_mido_seg.yaml  cellpose_sam_mido_seg.yaml  unet_mido_seg.yaml  yolo_v8m_seg_mido.yaml  yolo_v8s_seg_mido.yaml
cellstudio-core/tests/: test_hooks.py  test_wsi_processor.py
cellstudio-core/tests/integration/: test_tiny_pipeline.py
cellstudio-core/tests/qa_suite/: qa_catalog.yaml
cellstudio-core/tools/: aggregate_det_results.py  aggregate_results.py  analyze_datasets.py  benchmark_cellpose.py  cli.py  compare_debug.py  create_tiny_datasets.py  debug_detection_pipeline.py  debug_train_mini.py  export.py  migrate.py  modify_seg_configs.py  plot_results.py  predict.py  run_all_ordered.py  test_cellpose_init.py  test_cellpose_only.py  test_cp_backward.py  test_hang.py  train.py  train_all_tile.py  update_tile_configs.py  visualize_udf.py
cellstudio-core/tools/data/: generate_test_configs.py  migrate_dataset.py
cellstudio-server/: pyproject.toml
cellstudio-server/api/: config.yaml
(+256 files in other folders)
