[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pathstudio"
version = "0.1.0"
description = "A comprehensive deep learning framework for pathological cell analysis."
readme = "README.md"
authors = [
    { name = "AlchemyAITech", email = "contact@alchemyai.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy<2.0.0",
    "opencv-python-headless>=4.7.0",
    "tqdm>=4.65.0",
    "PyYAML>=6.0",
    "omegaconf>=2.3.0",
    "cellpose>=3.0.0",
    "segmentation-models-pytorch>=0.3.3"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]
all = [
    "ultralytics>=8.0.0",
    "timm>=0.9.0"
]

[tool.setuptools.packages.find]
include = ["pathstudio*"]
