[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cellstudio-server"
version = "0.1.0"
description = "FastAPI backend server for CellStudio."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    # 动态链接本地的 cellstudio-core (纯挂载形式，具体在实际安装时可以通过 pip install -e ../cellstudio-core 或是指定路径)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
include = ["api*"]
